# delegation-program

./: Cargo.toml
.github/workflows/: run-tests.yml
src/: consts.rs  discriminator.rs  entrypoint.rs  error.rs  lib.rs  pda.rs
src/args/: call_handler.rs
src/diff/: algorithm.rs  types.rs
src/instruction_builder/: commit_diff_from_buffer.rs  mod.rs
src/processor/: call_handler.rs  commit_state.rs  delegate.rs  mod.rs
src/processor/fast/: commit_diff.rs  commit_diff_from_buffer.rs  commit_state.rs  commit_state_from_buffer.rs  delegate.rs  finalize.rs  mod.rs  undelegate.rs
src/processor/fast/utils/: pda.rs  requires.rs
src/processor/utils/: curve.rs  loaders.rs
tests/: test_call_handler.rs
tests/integration/: Anchor.toml  package-lock.json  package.json
tests/integration/programs/test-delegation/: Cargo.toml
tests/integration/programs/test-delegation/src/: lib.rs
tests/integration/tests/: test-delegation.ts
