[package]
name = "magicblock-delegation-program"
description = "Delegation program for the Ephemeral Rollups"
version = "1.1.2"
authors = ["Magicblock Labs <dev@magicblock.gg>"]
edition = "2021"
license = "MIT"
homepage = "https://www.magicblock.gg/"
documentation = "https://docs.magicblock.gg/"
repository = "https://github.com/magicblock-labs/delegation-program"
readme = "./README.md"
keywords = ["solana", "crypto", "delegation", "ephemeral-rollups", "magicblock"]

[profile.release]
opt-level  = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false

[lib]
crate-type = ["cdylib", "lib"]
name = "dlp"

[features]
no-entrypoint = []
default = ["solana-security-txt"]
unit_test_config = []
log-cost = []
logging = []

[dependencies]
borsh = { version = "1.5.3", features = [ "derive" ] }
paste = "^1.0"
solana-program = "2.2"
bytemuck = { version = "1.21", features = [ "derive" ] }
num_enum = "^0.7.2"
thiserror = "^1.0.57"
solana-security-txt = { version = "1.1.1", optional = true }
solana-curve25519 = "2.2"
bincode = "1.3.3"
pinocchio-log = "0.5.0"
pinocchio = "0.9.2"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
rkyv = "0.7.45"
static_assertions = "1.1.0"

[dev-dependencies]
base64 = "0.22.1"
rand = "0.8.5"
solana-program-test = "2.2"
solana-sdk = "2.2"
tokio = { version = "1.0", features = ["full"] }
magicblock-delegation-program = { path = ".", features = ["unit_test_config"] }

